# CMakeDeployDllWithCustomTargetExample

./: CMakeLists.txt  README.md
myexe/: CMakeLists.txt  main.cpp
mylib/: CMakeLists.txt  foo.h
